--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="overflow-y: scroll;">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/KVLogo.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/logoabot.png" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="path/to/materialize.css">
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Kiuvi Services</title>
+    <title>A-Bot</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
